--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "clarifai": "^2.9.1",
+    "clarifai-nodejs-grpc": "^6.11.0",
     "gh-pages": "^3.1.0",
+    "grpc": "^1.24.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-parallax-tilt": "^1.4.67",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
     "react-tilt": "^0.1.4",
