--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-parallax-tilt": "^1.4.67",
     "react-particles-js": "^3.4.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
